# macro-gen

./: pyproject.toml
macro_gen/: inputrecorder.py  main.py  utils.py
